fix: expert-story 15px + из&nbsp; + problem-3 wrap fix
- expert-story: 17px -> 15px (4 lines: heading + 3 body)
- "деньги из карманов" -> "из&nbsp;карманов" (hanging preposition)
- problem-text: white-space nowrap -> normal (text was overflowing right)
- Problem 3: add <br> before "акции и скидки"

--- a/css/styles.css
+++ b/css/styles.css
@@ -1100,7 +1100,7 @@ ul {
 .expert-story {
   font-family: 'Oswald', sans-serif;
   font-weight: 400;
-  font-size: 17px;
+  font-size: 15px;
   line-height: 1.5;
   color: var(--text-primary);
   text-align: left;
@@ -1196,7 +1196,7 @@ ul {
   font-size: 17px;
   line-height: 1.4;
   color: var(--text-primary);
-  white-space: nowrap;
+  white-space: normal;
   margin-top: 4px;
 }
 
